--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
     <section class="services">
         <div class="services-content container">                        
             <h2>Serviços</h2>
-            <p>It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>                
+            <p>Atualmente além do básico corte de cabelo e da barba, as barbearias modernas estão oferecendo massagem, tratamento de pele e de cabelo, manicure e pedicure, produtos importados e mimos, como serviços de bar, jogos (videogames e/ou sinuca) e televisão com transmissão de esportes. Tudo para que eles se sentam à vontade e entre amigos ou fazer novas amizades.
+
+            </p>                
 
         </div>
 
